--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "ejs": "^2.6.1",
-    "express": "^4.17.0",
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
     "express-handlebars": "^3.0.0",
-    "pug": "^2.0.3"
+    "mysql2": "^1.7.0",
+    "pug": "^2.0.3",
+    "sequelize": "^5.19.1"
   }
 }
