--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.3.0",
     "mongodb": "^3.3.2",
-    "mongoose": "^5.7.5",
+    "mongoose": "^5.7.4",
     "multer": "^1.4.2",
     "mysql2": "^1.7.0",
     "nodemailer": "^6.3.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.10.0",
     "pug": "^2.0.3",
-    "sequelize": "^5.19.1"
+    "sequelize": "^5.19.1",
+    "stripe": "^7.14.0"
   }
 }
